# helix-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/: golden_set.json
docs/: architecture.mmd  architecture_compact.mmd  generate_social_card.py  helix-rag-concepts.md
scripts/: generate_golden_set.py  ingest.py  query.py  run_agent.py  run_eval.py
src/: models.py
src/agent/: agent.py
src/chunking/: splitter.py
src/embedding/: embedder.py
src/generation/: generator.py
src/ingestion/: parser.py
src/retrieval/: retriever.py
src/ui/: app.py
src/vectorstore/: store.py
tests/: test_agent.py  test_chunking.py  test_embedding.py  test_eval_thresholds.py  test_generation.py  test_ingestion.py  test_retrieval.py  test_ui.py  test_vectorstore.py
