[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "helix-rag"
version = "0.1.0"
description = "End-to-end RAG pipeline for biomedical research papers"
requires-python = ">=3.11"
dependencies = [
    # Phase 1: ingestion + chunking
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.2.0",

    # Phase 2: embedding + vector store
    "openai>=1.30.0",
    "qdrant-client>=1.9.0",

    # Phase 3: retrieval
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",

    # Utilities (used across all phases)
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# Phase 5: evaluation — installed when evals are built
eval = [
    "ragas>=0.1.0",
    "deepeval>=1.0.0",
]

# Phase 6: agent — installed when agent is built
agent = [
    "openai-agents>=0.0.7",
]

# Phase 4+: guardrails — installed when guardrails are built
guardrails = [
    "guardrails-ai>=0.5.0",
]

# Phase 7: UI — installed when UI is built
ui = [
    "gradio>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
